--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar {
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(219, 8%, 38%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(219, 8%, 26%);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(219, 8%, 20%);
+}
+
+/*=============== SWIPER BULLET ===============*/
+.swiper-pagination-bullet {
+  background-color: #888b91 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #77bef8 !important;
+}
